--- a/Estudos/html-css/exercicios/ex002/index.html
+++ b/Estudos/html-css/exercicios/ex002/index.html
@@ -14,12 +14,49 @@
         qualquer jeito.
         Basta colocar tudo
         no meio do par de tags
-        &lt;p&gt; e &lt;/p&gt;.
+        &lt;p&gt; e &lt;/p&gt;. <!-- LESS THAN / GREATER THAN -->>
     </p>
     <p>Se precisar quebrar
         o texto em algum lugar
         específico <br> como esse,
         você pode usar a tag &lt;br&gt;.
+    </p>
+    <p>Vamos adicionar alguns símbolos especiais:
+        &nbsp;
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &empty;
+        &sum;
+        &Delta;
+        &larr;
+        &uarr;
+        &rarr;
+        &darr; 
+    </p>
+    <p>Vamos adicionar alguns emojis:
+        &#x1F596;
+        &#x1F913;
+        <br>
+        Outros emojis:
+        &#x1F60D;
+        &#x1F618;
+        &#x1F92A;
+        &#x1F644;
+        &#x1F634;
+        &#x1F631;
+        &#x270C;
+        &#x1F645;
+        &#x1F64B;
+        &#x1F937;
+        &#x1F393;
+        &#x1F4BB;
+        &#x1F30E;
+        &#x1F6A8;
     </p>
 </body>
 </html>
