--- a/Estudos/html-css/exercicios/ex004/index.html
+++ b/Estudos/html-css/exercicios/ex004/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="cursoemvideo02.ico" type="Logo Cursoemvideo">
+    <!-- link favicon: recomendado que o arquivo tenha o nome FAVICON.ICO-->
     <title>Document</title>
     <h1>Olha o favicon aqui em cima</h1>
 </head>
