--- a/Estudos/html-css/exercicios/ex009/index.html
+++ b/Estudos/html-css/exercicios/ex009/index.html
@@ -11,6 +11,9 @@
     <h1>Usando links externos</h1>
     <p>Você pode acessar o meu <a href="https://gustavoguanabara.github.io/" target="_blank" rel="external">repositório público no GitHub.</a></p>
     <!-- target="_blank" rel="external" -> abre em uma nova guia -->
-    <p>Você também pode acessar o meu <a href="https://youtube.com/cursoemvideo" target="_blank" rel="external">canal gratuito no Youtube.</a></p>
+    <p>Você também pode acessar o meu <a href="https://youtube.com/cursoemvideo" target="_self" rel="external">canal gratuito no Youtube.</a></p>
+    <h2>Usando links internos</h2>
+    <p>Está é a primeira página do site. Se você quiser, pode acessar também a minha <a href="pag002.html" rel="next" target="_self">segunda página</a></p>
+    <p>Você também pode acessar a nossa <a href="noticias/pag003.html" rel="next" target="_self">página de notícias</a></p>
 </body>
 </html>
