--- a/desafios/modulo-01/d002/index.html
+++ b/desafios/modulo-01/d002/index.html
@@ -9,16 +9,14 @@
 </head>
 <body>
     <h1>Desafio das Imagens</h1>
-
     <p>Inserir imagens em HTML é muito simples, tanto no conteúdo quanto lá em cima, como ícone de favoritos!</p>
-
     <img src="imagens/github-m.png" alt="logo-github"><br>
+    <!-- Segue as demais imagens -->
     <!-- <img src="imagens/favicon.png" alt="logo-github"> -->
     <!-- <img src="imagens/icone.png" alt="logo-github"> -->
     <!-- <img src="imagens/github-gg.png" alt="logo-github"> -->
     <!-- <img src="imagens/github-g.png" alt="logo-github"> -->
     <!-- <img src="imagens/github-p.png" alt="logo-github"> -->
     <!-- <img src="imagens/github-pp.png" alt="logo-github"> -->
-
 </body>
 </html>
