--- a/desafios/modulo-01/d004/index.html
+++ b/desafios/modulo-01/d004/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../d002/imagens/favicon.ico" type="image/x-icon">
-    <title>Emojis</title>
+    <title>Emojis - Desafio 04</title>
 </head>
 <body>
     <h1>Meus emojis favoritos</h1>
