--- a/desafios/modulo-01/d005/index-pessoal.html
+++ b/desafios/modulo-01/d005/index-pessoal.html
@@ -44,25 +44,18 @@
             href="https://www.facebook.com/olukaslima" target="_blank" rel="external">/olukaslima</a> - Me acompanha lá no Facebook
     </li>
     <li>
-        <abbr title="Currículo">
-            <img src="imagens/icone-curriculo.png" alt="Imagem logo Site">
-        </abbr>
-        <a
-            href="https://www.cursoemvideo.com/" target="_blank" rel="external">/lucaslima</a> - Me acompanha lá no Facebook
-    </li>
-    <li>
         <abbr title="Currículo Online - Notion">
-            <img src="imagens/icone-notion.png" alt="Imagem logo Site">
+            <img src="imagens/icone-notion.png" alt="Imagem logo Notion">
         </abbr>
         <a
             href="https://glory-jay-53e.notion.site/Lucas-Louren-o-de-Lima-9b861c29195143f0a522968c03baddc0" target="_blank" rel="external">/lucaslima</a> - Me acompanha lá no Notion
     </li>
     <li>
-        <abbr title="Currículo Online - Notion">
-            <img src="imagens/icone-notion.png" alt="Imagem logo Site">
+        <abbr title="Currículo PDF">
+            <img src="imagens/icone-curriculo.png" alt="Imagem logo curriculo">
         </abbr>
         <a
-            href="https://glory-jay-53e.notion.site/Lucas-Louren-o-de-Lima-9b861c29195143f0a522968c03baddc0" target="_blank" rel="external">/lucaslima</a> - Me acompanha lá no Notion
+            href="imagens pessoal/CURRÍCULO - LUCAS LIMA.pdf" target="_blank" type="application/pdf">Currículo</a> - Tenha acesso ao meu currículo completo
     </li>
 
 
