--- a/Estudos/html-css/exercicios/ex002/index.html
+++ b/Estudos/html-css/exercicios/ex002/index.html
@@ -14,7 +14,7 @@
         qualquer jeito.
         Basta colocar tudo
         no meio do par de tags
-        &lt;p&gt; e &lt;/p&gt;. <!-- LESS THAN / GREATER THAN -->>
+        &lt;p&gt; e &lt;/p&gt;. <!-- LESS THAN / GREATER THAN -->
     </p>
     <p>Se precisar quebrar
         o texto em algum lugar
