--- a/desafios/modulo-01/d006/index.html
+++ b/desafios/modulo-01/d006/index.html
@@ -8,6 +8,19 @@
     <title>Tags HTML - Desafio 06</title>
 </head>
 <body>
-    
+    <h1>Tags em HTML</h1>
+    <p>Em HTML5, podemos inserir os elementos da lista a seguir. Passe o mouse sobre os termos para descobrir qual a tag deverá utilizar em cada caso.</p>
+
+    <ul>
+        <!--&lt; e &gt;.  LESS THAN / GREATER THAN -->
+        <p><li><abbr title="Use as tags &lt;p&gt; e &lt;/p&gt;">Parábrafos</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;h1&gt; e &lt;/h1&gt;">Títulos</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;img&gt; e &lt;/img&gt;">Imagens</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;abbr&gt; e &lt;/abbr&gt;">Abreviações</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;code&gt; e &lt;/code&gt;">Código-fonte</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;ol&gt; e &lt;/ol&gt;">Lista numeradas</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;ul&gt; e &lt;/ul&gt;">Lista com demarcadores</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;blockquote&gt; e &lt;/blockquote&gt;">Citações longas</abbr></li></p>
+    </ul>
 </body>
 </html>
