--- a/desafios/modulo-01/d006/index.html
+++ b/desafios/modulo-01/d006/index.html
@@ -21,6 +21,23 @@
         <p><li><abbr title="Use as tags &lt;ol&gt; e &lt;/ol&gt;">Lista numeradas</abbr></li></p>
         <p><li><abbr title="Use as tags &lt;ul&gt; e &lt;/ul&gt;">Lista com demarcadores</abbr></li></p>
         <p><li><abbr title="Use as tags &lt;blockquote&gt; e &lt;/blockquote&gt;">Citações longas</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;title&gt; e &lt;/title&gt;">Título da página</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;meta&gt; e &lt;/meta&gt;">Compatibilidade do código - charset=”UTF-8″</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;body&gt; e &lt;/body&gt;">Corpo do documento</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;header&gt; e &lt;/header&gt;">Cabeçalho</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;main&gt; e &lt;/main&gt;">Contúdo principal</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;footer&gt; e &lt;/footer&gt;">Rodapé</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;section&gt; e &lt;/section&gt;">Sessão da página</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;article&gt; e &lt;/article&gt;">Artigo</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;nav&gt; e &lt;/nav&gt;">Conteúdo de navegação (menus)</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;div&gt; e &lt;/div&gt;">Divisão</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;span&gt; e &lt;/span&gt;">Legenda de fomulário, imagem, etc.</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;video&gt; e &lt;/video&gt;">Vídeo</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;audio&gt; e &lt;/audio&gt;">Áudio</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;textarea&gt; e &lt;/textarea&gt;">Campo para formulário</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;style&gt; e &lt;/style&gt;">Códigos CSS - estilos</abbr></li></p>
+        <p><li><abbr title="Use as tags &lt;script&gt; e &lt;/script&gt;">Códigos para script</abbr></li></p>
+
     </ul>
 </body>
 </html>
