--- a/desafios/modulo-01/d007/index.html
+++ b/desafios/modulo-01/d007/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Imagem Flexível</h1>
     <p>Você está vendo a imagem completa? Experimente ampliar o tamanho da janela para aproveitar a melhor experiência.</p>
+    <img src="imagens/paisagem-m.png" alt="paisagem">
 </body>
 </html>
