--- a/desafios/modulo-01/d008/amarela.html
+++ b/desafios/modulo-01/d008/amarela.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Página Amarela</h1>
-    <p>Você agora esta na área amarela. Você acessou clicando no segundo link da página principal.</p>
+    <p>Você agora está na área amarela. Você acessou clicando no segundo link da página principal.</p>
 
     <ul>
         <li><a href="index.html">Voltar para a página cinza</a></li>
