--- a/desafios/modulo-01/d008/verde.html
+++ b/desafios/modulo-01/d008/verde.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Página Verde</h1>
-    <p>Você agora esta na área verde. Você acessou clicando no primeiro link da página principal.</p>
+    <p>Você agora está na área verde. Você acessou clicando no primeiro link da página principal.</p>
 
     <ul>
         <li><a href="index.html">Voltar para a página cinza</a></li>
