--- a/desafios/modulo-01/d008/index.html
+++ b/desafios/modulo-01/d008/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Desafio da Navegação</h1>
-    <p>Esta é a página principal, o índice do seu site. É a página cinza. A partir dela você pode acessar as outras áreas principais através dos links a seguir:</p>
+    <p>Esta é a página principal, o índice do seu site. É a página cinza. A partir dela você pode acessar outras áreas principais através dos links a seguir:</p>
 
     <ul>
         <li><a href="verde.html">Acessar a área verde</a></li>
