--- a/desafios/modulo-01/d009/curso-python.html
+++ b/desafios/modulo-01/d009/curso-python.html
@@ -5,19 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../d002/imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Curso Python</title>
 </head>
 <body>
     <h1>Curso de Python</h1>
 
     <div id='video'>
-        
+        <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/S9uPNppGsGo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>></iframe>
+        </p>
+
+        <p>
+            <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6" target="_blank" rel="external">
+                <strong>Veja o curso completo</strong>
+            </a>
+        </p>
+
+        <p>
+            <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dm6wYOIW20Nyg12TAjmMGT-" target="_blank" rel="external">
+                <strong>Veja a lista de exercícios</strong>
+            </a>
+        </p>
     </div>
 
-    <div id="voltar">
-        <img src="imagens/voltar.png" alt="back-botton">
+    <div id="voltar" target="_self" rel="prev">
+        <a href="index.html">
+            <img src="imagens/voltar.png" alt="back-botton">
+        </a>
     </div>
-    
+
 </body>
 </html>
