--- a/estudos/exercicios/ex015/index.html
+++ b/estudos/exercicios/ex015/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Estilos Locas / Internos</title>
+    <title>Estilos Externos</title>
 </head>
 <body>
 
@@ -19,6 +19,8 @@
     <h2>Capítulo 2.1 </h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, excepturi soluta ipsam nobis obcaecati incidunt fugit tempora animi. Accusantium ad quod reprehenderit ut dicta veniam sit veritatis nesciunt vero quaerat?
     </p>
+
+    <p><a href="pagina02.html">Voltar</a></p>
 
 </body>
 </html>
