--- a/estudos/exercicios/ex015/index.html
+++ b/estudos/exercicios/ex015/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Estilos Externos</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        h1 {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
 
@@ -20,7 +25,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, excepturi soluta ipsam nobis obcaecati incidunt fugit tempora animi. Accusantium ad quod reprehenderit ut dicta veniam sit veritatis nesciunt vero quaerat?
     </p>
 
-    <p><a href="pagina02.html">Voltar</a></p>
+    <p style="text-align: right;"><a href="pagina02.html">Ir para página 2</a></p>
 
 </body>
 </html>
