--- a/estudos/exercicios/ex015/pagina02.html
+++ b/estudos/exercicios/ex015/pagina02.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Estilos Externos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <h1>Segunda página</h1>
     <h2>Teste de estilos</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam quos omnis, error eos sunt magni non. Sed, consequatur culpa corporis quia temporibus, id distinctio, ducimus consectetur fugiat quod cumque aspernatur?</p>
-    <p><a href="index.html" target="_self">Ir para página 2</a></p>
+    <p><a href="index.html" target="_self">Voltar</a></p>
 
 </body>
 </html>
