--- a/estudos/exercicios/ex017/fonte01.html
+++ b/estudos/exercicios/ex017/fonte01.html
@@ -8,11 +8,27 @@
     <style>
         body {
             font-family:Arial, Helvetica, sans-serif;
+            /* 
+            Medidas Absolutas
+            cm, mm, in, px, pt, pc
+
+            Recomendado W3C: px
+            
+            Medidas Relativas
+            em, ex, rem, vw, vh, %
+            Recomendado W3C: em
+
+            Considerações:
+            16 px geramente = 1em
+            */
+
+            /* font-size: 16px; */
+            font-size: 1em;
         }
 
-        h1, h2 {
+        /* h1, h2 {
           font-family: 'Times New Roman', Times, serif;  
-        }
+        } */
     </style>
 </head>
 <body>
