--- a/estudos/exercicios/ex017/fonte01.html
+++ b/estudos/exercicios/ex017/fonte01.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fontes em CSS</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');        
+       
         body {
-            font-family:Arial, Helvetica, sans-serif;
+            font-family: 'Work Sans'Arial, Helvetica, sans-serif;
+            font-size: 1em;
+
             /* 
             Medidas Absolutas
             cm, mm, in, px, pt, pc
@@ -23,12 +27,38 @@
             */
 
             /* font-size: 16px; */
+
+            /* 
             font-size: 1em;
+            font-weight: bolder;
+            font-style: italic;
+            text-decoration: underline; 
+            */
+
+            /* lighter normal bold bolder */
         }
 
         /* h1, h2 {
           font-family: 'Times New Roman', Times, serif;  
         } */
+
+        h1 {
+            /* 
+            shorthand font
+            - font-style -> font-weight -> font-size -> fonte-family
+
+            font-family: 'Times New Roman', Times, serif;
+            font-weight: bolder;
+            font-size: 3em;
+            text-decoration: italic;           
+            */
+            font: italic bolder 3em 'Work Sans', sans-serif;
+        }
+
+        h1 {
+            font: bold 2em 'Word Sans';
+        }
+
     </style>
 </head>
 <body>
