--- a/estudos/exercicios/ex018/fonte01.html
+++ b/estudos/exercicios/ex018/fonte01.html
@@ -13,6 +13,28 @@
 
         @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
 
+        @font-face {
+            font-family: 'Sketch 3D';
+            src: url('fonts/Sketch 3D.otf') format('opentype');
+            font-weight: normal;
+            font-style: normal;
+
+            /* 
+            EXEMPLO
+            src: url('fonts/Sketch 3D.otf') format('opentype'), url('fonts/Sketch 3D.ttf') format('truetype'); 
+            */
+
+            /* 
+                Tipos de format()
+                - opentype (otf)
+                - truetype (ttf)
+                - embedded-opentype
+                - truetype-aat (Apple Advanced Typography)
+                - svg
+            
+            */
+        }
+
         body {
             font-family: 'Work Sans', Arial, Helvetica, sans-serif;
             font-size: 16px;
@@ -20,7 +42,8 @@
         }
 
         h1 {
-            font-family: 'Kaushan Script', sans-serif;
+            font-family: 'Sketch 3D', sans-serif;
+            /* font-family: 'Kaushan Script', sans-serif; */
             font-size: 3em;
         }
 
