--- a/estudos/exercicios/ex019/seletor01.html
+++ b/estudos/exercicios/ex019/seletor01.html
@@ -10,18 +10,18 @@
 <body>
     <h1 id="principal">Criando Sites com HTML e CSS</h1>
     <h1>Aprendendo HTML</h1>
-    <h2>HTML básico</h2>
+    <h2 class="basico">HTML básico</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ut optio atque modi nam debitis natus, enim quae esse, voluptatibus beatae rerum <span class="basico">dolore repudiandae</span> odit aut? Aliquam, quis! Tenetur, dolore.</p>
+    <h2 class="intermediario">HTML intermediário</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ut optio atque modi nam debitis natus, enim quae esse, voluptatibus beatae rerum dolore repudiandae odit aut? Aliquam, quis! Tenetur, dolore.</p>
-    <h2>HTML intermediário</h2>
+    <h2 class="avancado">HTML avançado</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ut optio atque modi nam debitis natus, enim quae esse, voluptatibus beatae rerum dolore repudiandae odit aut? Aliquam, quis! Tenetur, dolore.</p>
-    <h2>HTML avançado</h2>
+    <h1 class="destaque">Aprendendo CSS</h1>
+    <h2 class="basico">CSS básico</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ut optio atque modi nam debitis natus, enim quae esse, voluptatibus beatae rerum dolore repudiandae odit aut? Aliquam, quis! Tenetur, dolore.</p>
-    <h1>Aprendendo CSS</h1>
-    <h2>CSS básico</h2>
+    <h2 class="intermediario">CSS intermediário</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ut optio atque modi nam debitis natus, enim quae esse, voluptatibus beatae rerum dolore repudiandae odit aut? Aliquam, quis! Tenetur, dolore.</p>
-    <h2>CSS intermediário</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ut optio atque modi nam debitis natus, enim quae esse, voluptatibus beatae rerum dolore repudiandae odit aut? Aliquam, quis! Tenetur, dolore.</p>
-    <h2>CSS avançado</h2>
+    <h2 class="avancado destaque">CSS avançado</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ut optio atque modi nam debitis natus, enim quae esse, voluptatibus beatae rerum dolore repudiandae odit aut? Aliquam, quis! Tenetur, dolore.</p>
 
 </body>
