--- a/estudos/exercicios/ex021/caixa02.html
+++ b/estudos/exercicios/ex021/caixa02.html
@@ -18,9 +18,16 @@
             padding: 10px;
             margin: 10px;
         }
+
+        h1 {
+            /* box-shadow: inset 2px 1px 14px 6px rgba(0, 0, 0, 0.5); */
+            box-shadow: 2px 1px 14px 6px rgba(0, 0, 0, 0.5);
+        }
+
         nav {
             background-color: rgb(102, 102, 102);
             padding: 3px;
+            box-shadow: 5px 3px 7px 1px rgba(0, 0, 0, 0.493);
         }
 
         nav > a {
@@ -53,8 +60,12 @@
             background-color: black;
             color: white;
             text-align: center;
-            padding: 1px;
-            margin: 00px;
+            padding: 4px;
+            margin: 0px;
+        }
+
+        footer > p {
+            margin: 0px;
         }
 
         
@@ -77,10 +88,10 @@
         </section>
         <section id="noticias">
             <article>
-                <h1>Notícias sobre o Brasil</h1>
+                <h2>Notícias sobre o Brasil</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, optio corporis voluptates vitae repellat adipisci expedita! Sint, obcaecati. Laboriosam similique rem at dolore, error ex et doloribus cum laudantium labore.</p>
                 <aside>
-                    <p>Artivgo escrito por José da Silva</p>
+                    <p>Artigo escrito por José da Silva</p>
                 </aside>
             </article>
         </section>
