--- a/estudos/exercicios/ex021/caixa02.html
+++ b/estudos/exercicios/ex021/caixa02.html
@@ -27,7 +27,8 @@
         nav {
             background-color: rgb(102, 102, 102);
             padding: 3px;
-            box-shadow: 5px 3px 7px 1px rgba(0, 0, 0, 0.493);
+            /* box-shadow: 5px 3px 7px 1px rgba(0, 0, 0, 0.493); */
+            box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.315);
         }
 
         nav > a {
@@ -45,6 +46,8 @@
             background-color: white;
             padding: 10px;
             margin: 10px;
+            border-radius: 10px 0px;
+            box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.384);
         }
 
         article {
@@ -66,6 +69,14 @@
 
         footer > p {
             margin: 0px;
+        }
+
+        div#bola {
+            height: 100px;
+            width: 100px;
+            margin: 10px;
+            background-color: white;
+            border-radius: 50%;
         }
 
         
@@ -99,5 +110,6 @@
     <footer>
         <p>Desenvolvido por Lucas Lima</p>
     </footer>
+    <div id="bola"></div>
 </body>
 </html>
