--- a/estudos/exercicios/ex022/fundo006.html
+++ b/estudos/exercicios/ex022/fundo006.html
@@ -11,7 +11,7 @@
       background-color: black;
       background-image: url('images/wallpaper002.jpg');
       background-position: center center;
-      background-repeat: no-repeat;
+      background-repeat: repeat-y;
       background-size: cover;
     }
 
@@ -31,6 +31,21 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem est animi, consequuntur illo quos reiciendis atque doloremque recusandae suscipit amet quod similique vero ex perferendis laudantium temporibus dolorem quae! Praesentium.
     Eveniet maxime quis est voluptatum laborum? Minus nesciunt impedit doloribus. Harum, molestias maiores ex laboriosam dolor officia dolore magnam ipsum fugiat sunt deserunt suscipit minima! Eligendi distinctio officiis facere minus?
     Nobis reiciendis nesciunt temporibus totam aperiam perspiciatis voluptatem consequatur dolorum. Vitae, deserunt iusto! Eum quas rerum ipsa modi non, repellendus sint ullam quod esse doloremque similique sequi cum corrupti deserunt.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem est animi, consequuntur illo quos reiciendis atque doloremque recusandae suscipit amet quod similique vero ex perferendis laudantium temporibus dolorem quae! Praesentium.
+      Eveniet maxime quis est voluptatum laborum? Minus nesciunt impedit doloribus. Harum, molestias maiores ex laboriosam dolor officia dolore magnam ipsum fugiat sunt deserunt suscipit minima! Eligendi distinctio officiis facere minus?
+      Nobis reiciendis nesciunt temporibus totam aperiam perspiciatis voluptatem consequatur dolorum. Vitae, deserunt iusto! Eum quas rerum ipsa modi non, repellendus sint ullam quod esse doloremque similique sequi cum corrupti deserunt.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem est animi, consequuntur illo quos reiciendis atque doloremque recusandae suscipit amet quod similique vero ex perferendis laudantium temporibus dolorem quae! Praesentium.
+        Eveniet maxime quis est voluptatum laborum? Minus nesciunt impedit doloribus. Harum, molestias maiores ex laboriosam dolor officia dolore magnam ipsum fugiat sunt deserunt suscipit minima! Eligendi distinctio officiis facere minus?
+        Nobis reiciendis nesciunt temporibus totam aperiam perspiciatis voluptatem consequatur dolorum. Vitae, deserunt iusto! Eum quas rerum ipsa modi non, repellendus sint ullam quod esse doloremque similique sequi cum corrupti deserunt.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem est animi, consequuntur illo quos reiciendis atque doloremque recusandae suscipit amet quod similique vero ex perferendis laudantium temporibus dolorem quae! Praesentium.
+          Eveniet maxime quis est voluptatum laborum? Minus nesciunt impedit doloribus. Harum, molestias maiores ex laboriosam dolor officia dolore magnam ipsum fugiat sunt deserunt suscipit minima! Eligendi distinctio officiis facere minus?
+          Nobis reiciendis nesciunt temporibus totam aperiam perspiciatis voluptatem consequatur dolorum. Vitae, deserunt iusto! Eum quas rerum ipsa modi non, repellendus sint ullam quod esse doloremque similique sequi cum corrupti deserunt.</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem est animi, consequuntur illo quos reiciendis atque doloremque recusandae suscipit amet quod similique vero ex perferendis laudantium temporibus dolorem quae! Praesentium.
+            Eveniet maxime quis est voluptatum laborum? Minus nesciunt impedit doloribus. Harum, molestias maiores ex laboriosam dolor officia dolore magnam ipsum fugiat sunt deserunt suscipit minima! Eligendi distinctio officiis facere minus?
+            Nobis reiciendis nesciunt temporibus totam aperiam perspiciatis voluptatem consequatur dolorum. Vitae, deserunt iusto! Eum quas rerum ipsa modi non, repellendus sint ullam quod esse doloremque similique sequi cum corrupti deserunt.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem est animi, consequuntur illo quos reiciendis atque doloremque recusandae suscipit amet quod similique vero ex perferendis laudantium temporibus dolorem quae! Praesentium.
+              Eveniet maxime quis est voluptatum laborum? Minus nesciunt impedit doloribus. Harum, molestias maiores ex laboriosam dolor officia dolore magnam ipsum fugiat sunt deserunt suscipit minima! Eligendi distinctio officiis facere minus?
+              Nobis reiciendis nesciunt temporibus totam aperiam perspiciatis voluptatem consequatur dolorum. Vitae, deserunt iusto! Eum quas rerum ipsa modi non, repellendus sint ullam quod esse doloremque similique sequi cum corrupti deserunt.</p>
   </main>
 </body>
 </html>
