--- a/estudos/exercicios/ex022/fundo006.html
+++ b/estudos/exercicios/ex022/fundo006.html
@@ -7,7 +7,7 @@
   <title>Fundo Fixo de Tela</title>
   <style>
     body {
-      height: 100vh;;
+      height: 100vh;
       background-color: black;
       background-image: url('images/wallpaper002.jpg');
       background-position: center center;
