Atualização com os dados do Wikipédia

--- a/estudos/exercicios/ex023/tabela002.html
+++ b/estudos/exercicios/ex023/tabela002.html
@@ -11,7 +11,7 @@
     }
     
     table {
-      width: 500px;
+      width: 600px;
       border-collapse: collapse;
     }
 
@@ -69,7 +69,7 @@
       <tr>
         <th scope="col">Posição</th>
         <th scope="col">Estado</th>
-        <th scope="col">População</th>
+        <th scope="col">População (Prévia 2022)</th>
         <th scope="col">% da população</th>
       </tr>
     </thead>
@@ -78,32 +78,164 @@
       <tr>
         <td>1</td>
         <td>São Paulo</td>
-        <td class="num">45.919.049</td>
-        <td class="num">21,9%</td>
+        <td class="num">46.024.937</td>
+        <td class="num">22,2%</td>
       </tr>
       <tr>
         <td>2</td>
         <td>Minas Gerais</td>
-        <td class="num">21.160.791</td>
-        <td class="num">10,1%</td>
+        <td class="num">20.732.660</td>
+        <td class="num">10,0%</td>
       </tr>
       <tr>
         <td>3</td>
         <td>Rio de Janeiro</td>
-        <td class="num">17.264.943</td>
-        <td class="num">8,2%</td>
+        <td class="num">16.615.526</td>
+        <td class="num">8,0%</td>
       </tr>
       <tr>
         <td>4</td>
         <td>Bahia</td>
-        <td class="num">14.873.064</td>
+        <td class="num">14.659.023</td>
         <td class="num">7,1%</td>
       </tr>
       <tr>
         <td>5</td>
         <td>Paraná</td>
-        <td class="num">11.433.957</td>
-        <td class="num">5,4%</td>
+        <td class="num">11.835.379</td>
+        <td class="num">5,7%</td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td>Rio Grande Do Sul</td>
+        <td class="num">11.088.065</td>
+        <td class="num">5,3%</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>Pernanbuco</td>
+        <td class="num">9.051.113</td>
+        <td class="num">4,4%</td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td>Ceará</td>
+        <td class="num">8.936.431</td>
+        <td class="num">4,3%</td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td>Pará</td>
+        <td class="num">8.442.962</td>
+        <td class="num">4,1%</td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td>Santa Catarina</td>
+        <td class="num">7.762.154</td>
+        <td class="num">3,7%</td>
+      </tr>
+      <tr>
+        <td>11</td>
+        <td>Goiás</td>
+        <td class="num">6.950.976</td>
+        <td class="num">3,3%</td>
+      </tr>
+      <tr>
+        <td>12</td>
+        <td>Maranhão</td>
+        <td class="num">6.800.605</td>
+        <td class="num">3,3%</td>
+      </tr>
+      <tr>
+        <td>13</td>
+        <td>Espírito Santo</td>
+        <td class="num">4.108.508</td>
+        <td class="num">1,9%</td>
+      </tr>
+      <tr>
+        <td>14</td>
+        <td>Paraíba</td>
+        <td class="num">4.030.961</td>
+        <td class="num">1,9%</td>
+      </tr>
+      <tr>
+        <td>15</td>
+        <td>Amazonas</td>
+        <td class="num">3.952.262</td>
+        <td class="num">1,9%</td>
+      </tr>
+      <tr>
+        <td>16</td>
+        <td>Mato Grosso</td>
+        <td class="num">3.784.239</td>
+        <td class="num">1,8%</td>
+      </tr>
+      <tr>
+        <td>17</td>
+        <td>Rio Grande do Norte</td>
+        <td class="num">3.303.953</td>
+        <td class="num">1,6%</td>
+      </tr>
+      <tr>
+        <td>18</td>
+        <td>Piauí</td>
+        <td class="num">3.270.174	</td>
+        <td class="num">1,6%</td>
+      </tr>
+      <tr>
+        <td>19</td>
+        <td>Alagoas</td>
+        <td class="num">3.125.254</td>
+        <td class="num">1,5%</td>
+      </tr>
+      <tr>
+        <td>20</td>
+        <td>Distrito Federal</td>
+        <td class="num">2.923.369</td>
+        <td class="num">1,4%</td>
+      </tr>
+      <tr>
+        <td>21</td>
+        <td>Mato Grosso do Sul</td>
+        <td class="num">2.833.742	</td>
+        <td class="num">1,4%</td>
+      </tr>
+      <tr>
+        <td>22</td>
+        <td>Sergipe</td>
+        <td class="num">2.211.868</td>
+        <td class="num">1,1%</td>
+      </tr>
+      <tr>
+        <td>23</td>
+        <td>Rondônia</td>
+        <td class="num">1.616.379</td>
+        <td class="num">0,8%</td>
+      </tr>
+      <tr>
+        <td>24</td>
+        <td>Tocantins</td>
+        <td class="num">1.584.306</td>
+        <td class="num">0,8%</td>
+      </tr>
+      <tr>
+        <td>25</td>
+        <td>Acre</td>
+        <td class="num">829.780</td>
+        <td class="num">0,4%</td>
+      </tr>
+      <tr>
+        <td>26</td>
+        <td>Amapá</td>
+        <td class="num">774.268</td>
+        <td class="num">0,4%</td>
+      </tr>
+      <tr>
+        <td>27</td>
+        <td>Roraima</td>
+        <td class="num">634.805</td>
+        <td class="num">0,3%</td>
       </tr>
     </tbody>
 
@@ -111,11 +243,58 @@
       <tr>
         <td></td>
         <th scope="row">Total de Habitantes</th>
-        <td class="num"><strong>210.147.125</strong></td>
+        <td class="num"><strong>207.883.699</strong></td>
         <td class="num"><strong>100%</strong></td>
       </tr>
     </tfoot>
   </table>
 
+  <br><br><br><br>
+  
+  <table>
+    <caption>População Por Região</caption>
+    <thead>
+      <tr>
+        <th scope="col">Posição</th>
+        <th scope="col">Região</th>
+        <th scope="col">População (Prévia 2022)</th>
+        <th scope="col">% da população</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Região Sudeste</td>
+        <td class="num">87.481.631</td>
+        <td class="num">42,10%</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Região Nordeste</td>
+        <td class="num">55.389.382</td>
+        <td class="num">26,66%</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Região Sul</td>
+        <td class="num">30.685.598</td>
+        <td class="num">14,77%</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>Região Norte</td>
+        <td class="num">17.834.762</td>
+        <td class="num">8,58%</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>Região Centro-Oeste</td>
+        <td class="num">16.492.326</td>
+        <td class="num">7,93%</td>
+      </tr>
+  </table>
+
+  <p><a href="https://pt.wikipedia.org/wiki/Lista_de_unidades_federativas_do_Brasil_por_popula%C3%A7%C3%A3o">Fonte dos dados</a></p>
 </body>
 </html>
