Cabeçalho fixo em tabelas grandes

--- a/estudos/exercicios/ex023/tabela002.html
+++ b/estudos/exercicios/ex023/tabela002.html
@@ -13,6 +13,7 @@
     table {
       width: 600px;
       border-collapse: collapse;
+      position: relative;
     }
 
     td, th {
@@ -28,8 +29,14 @@
     }
 
     thead, tfoot {
-      background-color: gray;
+      background-color: #383838;
       color: white;
+    }
+
+    thead > tr > th {
+      position: sticky;
+      top: -1px;
+      background-color: #383838;
     }
 
     /* tbody > tr:nth-child(2n) {
@@ -296,5 +303,38 @@
   </table>
 
   <p><a href="https://pt.wikipedia.org/wiki/Lista_de_unidades_federativas_do_Brasil_por_popula%C3%A7%C3%A3o">Fonte dos dados</a></p>
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vero molestias, ipsum assumenda, eaque dolores exercitationem, ratione voluptatibus delectus corporis perspiciatis? Nesciunt, minus! Iste eligendi nulla, dolore fugiat laudantium totam.
+  Soluta facere eos vel cum eius aliquid perspiciatis impedit optio rerum. Aspernatur illo consequatur vitae accusamus sapiente voluptas nemo aut voluptate fugiat obcaecati, tempore qui quam, rem suscipit molestias voluptatum!
+  Perferendis fugiat illum voluptas necessitatibus sint ad, doloribus enim unde quam, dolores adipisci recusandae dignissimos iure. Enim, facere voluptatum nesciunt ratione, ipsam veniam in tenetur commodi, eius dolorem autem nulla.
+  Porro quasi quo neque. Ut ab officiis quaerat accusamus ipsa dolor laudantium neque molestias omnis. Totam tempore minima, quidem, aliquam quis iure velit repellat cum ratione repudiandae fugiat debitis dolores?
+  Corporis quas itaque aut, repudiandae velit quos obcaecati accusantium saepe quae fuga, ducimus ab at cumque veritatis officia modi reprehenderit esse. Iusto quas magni similique labore quidem nesciunt eaque veritatis?
+  Maxime recusandae error voluptates unde fugiat quia at eveniet exercitationem voluptatum, nulla, mollitia quis iste eius commodi earum tenetur. Autem doloremque cum ratione voluptatum quibusdam quis aspernatur harum tempore deleniti.
+  Sit voluptas placeat, tenetur beatae, quae nostrum nulla corporis repellat laboriosam sunt facilis. Voluptates omnis illum repellendus iure ipsa cumque repellat accusamus quis inventore commodi, dolores magnam. Harum, doloremque libero.
+  Provident architecto optio ad saepe ipsam! Debitis, vitae nam eligendi ab iusto, consequatur at dolore ut, ullam repudiandae quasi. Quidem pariatur dolore quo architecto nemo repellendus maiores itaque, perferendis delectus.
+  Tempore dolorum, reiciendis numquam repudiandae sunt consectetur nemo molestiae. Ullam quaerat accusamus quis aut odio pariatur doloribus, omnis sunt explicabo debitis quos fuga aspernatur a ut deleniti eius atque facere?
+  Accusamus ut maiores atque eius cupiditate corporis laborum consectetur rerum quidem ratione blanditiis sint, totam nesciunt. Reprehenderit ipsa explicabo tempora aliquam alias, maxime quo quibusdam, sequi iusto atque dicta optio.</p>
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vero molestias, ipsum assumenda, eaque dolores exercitationem, ratione voluptatibus delectus corporis perspiciatis? Nesciunt, minus! Iste eligendi nulla, dolore fugiat laudantium totam.
+    Soluta facere eos vel cum eius aliquid perspiciatis impedit optio rerum. Aspernatur illo consequatur vitae accusamus sapiente voluptas nemo aut voluptate fugiat obcaecati, tempore qui quam, rem suscipit molestias voluptatum!
+    Perferendis fugiat illum voluptas necessitatibus sint ad, doloribus enim unde quam, dolores adipisci recusandae dignissimos iure. Enim, facere voluptatum nesciunt ratione, ipsam veniam in tenetur commodi, eius dolorem autem nulla.
+    Porro quasi quo neque. Ut ab officiis quaerat accusamus ipsa dolor laudantium neque molestias omnis. Totam tempore minima, quidem, aliquam quis iure velit repellat cum ratione repudiandae fugiat debitis dolores?
+    Corporis quas itaque aut, repudiandae velit quos obcaecati accusantium saepe quae fuga, ducimus ab at cumque veritatis officia modi reprehenderit esse. Iusto quas magni similique labore quidem nesciunt eaque veritatis?
+    Maxime recusandae error voluptates unde fugiat quia at eveniet exercitationem voluptatum, nulla, mollitia quis iste eius commodi earum tenetur. Autem doloremque cum ratione voluptatum quibusdam quis aspernatur harum tempore deleniti.
+    Sit voluptas placeat, tenetur beatae, quae nostrum nulla corporis repellat laboriosam sunt facilis. Voluptates omnis illum repellendus iure ipsa cumque repellat accusamus quis inventore commodi, dolores magnam. Harum, doloremque libero.
+    Provident architecto optio ad saepe ipsam! Debitis, vitae nam eligendi ab iusto, consequatur at dolore ut, ullam repudiandae quasi. Quidem pariatur dolore quo architecto nemo repellendus maiores itaque, perferendis delectus.
+    Tempore dolorum, reiciendis numquam repudiandae sunt consectetur nemo molestiae. Ullam quaerat accusamus quis aut odio pariatur doloribus, omnis sunt explicabo debitis quos fuga aspernatur a ut deleniti eius atque facere?
+    Accusamus ut maiores atque eius cupiditate corporis laborum consectetur rerum quidem ratione blanditiis sint, totam nesciunt. Reprehenderit ipsa explicabo tempora aliquam alias, maxime quo quibusdam, sequi iusto atque dicta optio.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vero molestias, ipsum assumenda, eaque dolores exercitationem, ratione voluptatibus delectus corporis perspiciatis? Nesciunt, minus! Iste eligendi nulla, dolore fugiat laudantium totam.
+      Soluta facere eos vel cum eius aliquid perspiciatis impedit optio rerum. Aspernatur illo consequatur vitae accusamus sapiente voluptas nemo aut voluptate fugiat obcaecati, tempore qui quam, rem suscipit molestias voluptatum!
+      Perferendis fugiat illum voluptas necessitatibus sint ad, doloribus enim unde quam, dolores adipisci recusandae dignissimos iure. Enim, facere voluptatum nesciunt ratione, ipsam veniam in tenetur commodi, eius dolorem autem nulla.
+      Porro quasi quo neque. Ut ab officiis quaerat accusamus ipsa dolor laudantium neque molestias omnis. Totam tempore minima, quidem, aliquam quis iure velit repellat cum ratione repudiandae fugiat debitis dolores?
+      Corporis quas itaque aut, repudiandae velit quos obcaecati accusantium saepe quae fuga, ducimus ab at cumque veritatis officia modi reprehenderit esse. Iusto quas magni similique labore quidem nesciunt eaque veritatis?
+      Maxime recusandae error voluptates unde fugiat quia at eveniet exercitationem voluptatum, nulla, mollitia quis iste eius commodi earum tenetur. Autem doloremque cum ratione voluptatum quibusdam quis aspernatur harum tempore deleniti.
+      Sit voluptas placeat, tenetur beatae, quae nostrum nulla corporis repellat laboriosam sunt facilis. Voluptates omnis illum repellendus iure ipsa cumque repellat accusamus quis inventore commodi, dolores magnam. Harum, doloremque libero.
+      Provident architecto optio ad saepe ipsam! Debitis, vitae nam eligendi ab iusto, consequatur at dolore ut, ullam repudiandae quasi. Quidem pariatur dolore quo architecto nemo repellendus maiores itaque, perferendis delectus.
+      Tempore dolorum, reiciendis numquam repudiandae sunt consectetur nemo molestiae. Ullam quaerat accusamus quis aut odio pariatur doloribus, omnis sunt explicabo debitis quos fuga aspernatur a ut deleniti eius atque facere?
+      Accusamus ut maiores atque eius cupiditate corporis laborum consectetur rerum quidem ratione blanditiis sint, totam nesciunt. Reprehenderit ipsa explicabo tempora aliquam alias, maxime quo quibusdam, sequi iusto atque dicta optio.</p>
 </body>
 </html>
