Mesclagem de células - Tabela habitantes

--- a/estudos/exercicios/ex023/tabela002.html
+++ b/estudos/exercicios/ex023/tabela002.html
@@ -248,8 +248,8 @@
 
     <tfoot>
       <tr>
-        <td></td>
-        <th scope="row">Total de Habitantes</th>
+        <!-- <td></td> -->
+        <th scope="row" colspan="2">Total de Habitantes</th>
         <td class="num"><strong>207.883.699</strong></td>
         <td class="num"><strong>100%</strong></td>
       </tr>
