--- a/estudos/desafios/modulo-02/d014/index.html
+++ b/estudos/desafios/modulo-02/d014/index.html
@@ -10,76 +10,141 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
+    caption {
+      border: 2px solid black;
+    }
+    
     table {
+      width: 600px;
       border-collapse: collapse;
-      width: 300px;
-
+      position: relative;
       border: 2px solid black;
     }
 
-    td {
+    td, th {
       border: 1px solid black;
       padding: 10px;
       text-align: center;
     }
+
+    caption {
+      font-size:1.5em;
+      font-weight: bold;
+      padding: 10px;
+      background-color: lightgray;
+    }
+
+    thead {
+      background-color: #383838;
+      color: white;
+
+      font-weight: bold;
+    }
+
+    thead > tr > th {
+      position: sticky;
+      top: -1px;
+      background-color: #383838;
+    }
+
+    /* tbody > tr:nth-child(2n) {
+      background-color:lightgray;
+    } */
+
+    tbody > tr:nth-child(odd) { /* 2n-1 */
+      background-color:white;
+    }
+
+    tbody > tr:nth-child(even) { /* 2n */
+      background-color:lightgray;
+    }
+
+    .subtotal {
+      position: sticky;
+      top: -1px;
+      background-color: #383838;
+
+      text-align: left;
+      color: white;
+      font-weight: bold;
+    }
+
+    tfoot > tr:nth-child(odd) { /* 2n-1 */
+      background-color:white;
+    }
+
+    tfoot > tr:nth-child(even) { /* 2n */
+      background-color:lightgray;
+    }
+
   </style>
 </head>
 <body>
-  <h1>Desafio - Capítulo 21</h1>
-  <h2>Desafio 01</h2>
-  <table>
-    <tr>
-      <td>1</td>
-      <td>2</td>
-      <td rowspan="2">3</td>
-      <td>4</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>6</td>
-      <td>7</td>
-    </tr>
-    <tr>
-      <td colspan="3">8</td>
-      <td>9</td>
-    </tr>
-    <tr>
-      <td rowspan="2">10</td>
-      <td colspan="2">11</td>
-      <td>12</td>
-    </tr>
-    <tr>
-      <td>13</td>
-      <td>14</td>
-      <td>15</td>
-    </tr>
-  </table>
+  <h1>Desafio parte 2 - Capítulo 21</h1>
+  <h2>Desafio de disciplinas</h2>
 
-  <h2>Desafio 02</h2>
   <table>
-    <tr>
-      <td colspan="4">A</td>
-      <td rowspan="4">B</td>
-    </tr>
-    <tr>
-      <td rowspan="4">C</td>
-      <td>D</td>
-      <td>E</td>
-      <td>F</td>
-    </tr>
-    <tr>
-      <td>G</td>
-      <td>H</td>
-      <td>I</td>
-    </tr>
-    <tr>
-      <td>J</td>
-      <td>K</td>
-      <td>L</td>
-    </tr>
-    <tr>
-      <td colspan="4">M</td>
-    </tr>
+    <caption>Notas curriculares</caption>
+    <thead>
+      <tr>
+        <th rowspan="2" scope="row">Área</th>
+        <th rowspan="2" scope="row">Disciplina</th>
+        <th colspan="2" scope="rowgroup">Notas</th>
+        <th rowspan="2" scope="row">Média</th>
+      </tr>
+      <tr>
+        <td>Nota 1</td>
+        <td>Nota 2</td>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td rowspan="4" scope="colgroup">Exatas</td>
+        <td>Matemática</td>
+        <td>0.0</td>
+        <td>0.0</td>
+        <td>0.0</td>
+      </tr>
+      <tr>
+        <td>Física</td>
+        <td>0.0</td>
+        <td>0.0</td>
+        <td>0.0</td>
+      </tr>
+      <tr>
+        <td>Química</td>
+        <td>0.0</td>
+        <td>0.0</td>
+        <td>0.0</td>
+      </tr>
+      <tr>
+        <td>Biologia</td>
+        <td>0.0</td>
+        <td>0.0</td>
+        <td>0.0</td>
+      </tr>
+      <th class="subtotal" colspan="4">Média de Exatas</th>
+      <td>0.0</td>
+    </tbody>
+
+    <tfoot>
+      <tr>
+        <td rowspan="2"  scope="colgroup">Humanas</td>
+        <td>História</td>
+        <td>0.0</td>
+        <td>0.0</td>
+        <td>0.0</td>
+      </tr>
+      <tr>
+        <td>Geografia</td>
+        <td>0.0</td>
+        <td>0.0</td>
+        <td>0.0</td>
+      </tr>
+      <th class="subtotal" colspan="4">Média de Humanas</th>
+      <td>0.0</td>
+    </tfoot>
   </table>
 </body>
 </html>
